Disable screen options on flyout under cursor

--- a/Pages/Behavior.xaml
+++ b/Pages/Behavior.xaml
@@ -112,7 +112,7 @@
             </StackPanel>
         </ui:CardControl>
 
-        <ui:CardControl Icon="{ui:SymbolIcon Desktop24}" Grid.Row="7" Margin="0 0 0 10">
+        <ui:CardControl Icon="{ui:SymbolIcon Desktop24}" Grid.Row="7" Margin="0 0 0 10" IsEnabled="{Binding FlyoutUnderCursor, Converter={StaticResource InverseBooleanConverter}}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout screen" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -123,7 +123,7 @@
         </ui:CardControl>
 
 
-        <ui:CardControl Icon="{ui:SymbolIcon AlignCenterHorizontal24}" Grid.Row="8" Margin="0 0 0 10">
+        <ui:CardControl Icon="{ui:SymbolIcon AlignCenterHorizontal24}" Grid.Row="8" Margin="0 0 0 10" IsEnabled="{Binding FlyoutUnderCursor, Converter={StaticResource InverseBooleanConverter}}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout horizontal allignment" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
@@ -134,7 +134,7 @@
         </ui:CardControl>
 
 
-        <ui:CardControl Icon="{ui:SymbolIcon AlignCenterVertical24}" Grid.Row="9" Margin="0 0 0 40">
+        <ui:CardControl Icon="{ui:SymbolIcon AlignCenterVertical24}" Grid.Row="9" Margin="0 0 0 40" IsEnabled="{Binding FlyoutUnderCursor, Converter={StaticResource InverseBooleanConverter}}">
             <ui:CardControl.Header>
                 <StackPanel>
                     <ui:TextBlock Text="Flyout vertical allignment" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
