--- a/Resources/CommonResources.xaml
+++ b/Resources/CommonResources.xaml
@@ -1,8 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib" 
+                    xmlns:Resources="clr-namespace:copy_flyouts.Resources">
 
     <sys:String x:Key="ProgramName">CopyFlyouts</sys:String>
     <sys:String x:Key="Version">v0.3.0</sys:String>
+    <Resources:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
 
 </ResourceDictionary>
