--- a/Resources/CommonResources.xaml
+++ b/Resources/CommonResources.xaml
@@ -4,6 +4,7 @@
                     xmlns:Resources="clr-namespace:copy_flyouts.Resources">
 
     <sys:String x:Key="ProgramName">CopyFlyouts</sys:String>
+    <sys:String x:Key="AuthorName">krznck</sys:String>
     <sys:String x:Key="Version">v0.3.0</sys:String>
     <Resources:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
 
