--- a/Pages/Behavior.xaml
+++ b/Pages/Behavior.xaml
@@ -63,7 +63,10 @@
         <ui:CardControl Icon="{ui:SymbolIcon ClipboardImage24}" Grid.Row="3" Margin="0 0 0 40">
             <ui:CardControl.Header>
                 <StackPanel>
-                    <ui:TextBlock Text="Show copied images" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
+                    <StackPanel Orientation="Horizontal">
+                        <ui:SymbolIcon Symbol="Info24" Margin="0 0 5 0" ToolTipService.ToolTip="Due to being unable to compare the images when disabled, flyouts may fail to determine whether a copy is a duplicate or failed copy attempt for images that do not have a path (such as those created from screenshots, or copied from websites)." FontSize="20"/>
+                        <ui:TextBlock Text="Show copied images" FontTypography="BodyStrong" TextWrapping="WrapWithOverflow"/>
+                    </StackPanel>
                     <ui:TextBlock Text="Displaying a flyout may be delayed if the copied image is too big." Appearance="Secondary" TextWrapping="WrapWithOverflow"/>
                 </StackPanel>
             </ui:CardControl.Header>
